@@ -1,5 +1,8 @@
 Version history for TryCatch perl module:
 
+  - Fix a few bugs with nested try statements (return and errors not falling
+    through as expected)
+
 1.001001 - 2009/05/16
   - Fix bug with nested try+die (Reported by Possum)
     As a result of this $@ will not have the value of the exception visible
